--- a/base.css
+++ b/base.css
@@ -6,17 +6,31 @@
   --primary-button-text-color: var(--primary-color);
   --secondary-button-bg-color: var(--primary-color);
   --secondary-button-text-color: var(--primary-color-on-text);
+  --speaker-decription-company-color: black;
 
   --font-family: "Inter", sans-serif;
 }
 
+.close {
+  display: none;
+}
+
 body {
-  background-color: var(--primary-color);
-  color: var(--primary-color-on-text);
   font-family: var(--font-family);
 }
 
-p {
+.primary--body {
+  background-color: var(--primary-color);
+  color: var(--primary-color-on-text);
+}
+
+.secondary--body {
+  background-color: #ffffff;
+  color: #ff7b54;
+}
+
+p,
+h2 {
   margin: 0;
 }
 
@@ -27,7 +41,6 @@ a {
 }
 
 .header__link {
-  grid-area: logo;
   font-size: 40px;
   font-weight: bold;
 }
@@ -92,4 +105,91 @@ header > img {
 .button:hover,
 .button:focus {
   outline: 2px solid var(--primary-color-on-text);
+}
+
+@media (max-width: 840px) {
+  .menu {
+    display: block;
+  }
+  .nav {
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    background: var(--primary-color);
+    top: 60px;
+    left: -100%;
+    padding-top: 60px;
+    transition: left 0.2s linear;
+  }
+
+  .home .close path {
+    fill: white;
+  }
+  .home .menu path {
+    fill: var(--primary-color-on-text);
+  }
+  .close--show {
+    display: block;
+  }
+  .menu--hide {
+    display: none;
+  }
+  .nav--visible {
+    left: 0;
+  }
+  .nav__list {
+    flex-direction: column;
+    justify-content: space-around;
+    height: 80%;
+  }
+  .nav__list-item {
+    font-size: 60pxpx;
+    font-weight: bold;
+  }
+
+  .header {
+    grid-template-columns: 33px 1fr 34px;
+    align-items: center;
+    justify-items: center;
+  }
+}
+
+.main {
+  padding: 150px;
+}
+.menu,
+.close {
+  cursor: pointer;
+}
+
+@media (max-width: 1220px) {
+  .button {
+    font-size: 24px;
+    padding: 0 32px;
+    height: 70px;
+  }
+  .button img {
+    width: 20px;
+  }
+}
+
+@media (max-width: 815px) {
+  .main {
+    padding: 75px;
+  }
+}
+
+@media (max-width: 700px) {
+  .button {
+    font-size: 16px;
+    margin-top: 24px;
+  }
+  .button-container {
+    margin-top: 32px;
+    flex-wrap: wrap;
+  }
+}
+
+.menu {
+  display: none;
 }
